--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -1,4 +1,5 @@
 {
-  "item.tutorialmod.amberite": "Amberite Gem",
-  "item.tutorialmod.raw_amberite": "Raw Amberite"
+  "item.gemstonemod.amberite": "Amberite Gem",
+  "item.gemstonemod.raw_amberite": "Raw Amberite",
+  "item.gemstonemod.saphirite": "Saphirite Gem"
 }
