--- a/src/main/resources/assets/gemstonemod/lang/en_us.json
+++ b/src/main/resources/assets/gemstonemod/lang/en_us.json
@@ -2,10 +2,12 @@
   "item.gemstonemod.amberite": "Amberite Gem",
   "item.gemstonemod.raw_amberite": "Raw Amberite",
   "item.gemstonemod.saphirite": "Saphirite Gem",
+  "item.gemstonemod.raw_saphirite": "Raw Saphirite",
 
   "block.gemstonemod.amberite_block": "Block of Amberite",
   "block.gemstonemod.amberite_ore": "Amberite Ore",
   "block.gemstonemod.deepslate_amberite_ore": "Deepslate Amberite Ore",
   "block.gemstonemod.deepslate_saphirite_ore": "Deepslate Saphirite Ore",
-  "block.gemstonemod.saphirite_ore": "Saphirite Ore"
+  "block.gemstonemod.saphirite_ore": "Saphirite Ore",
+  "block.gemstonemod.saphirite_block": "Saphirite Block"
 }
