--- a/src/main/resources/assets/gemstonemod/lang/en_us.json
+++ b/src/main/resources/assets/gemstonemod/lang/en_us.json
@@ -7,6 +7,8 @@
   "item.gemstonemod.saphirite_catalyst": "Saphirite Catalyst",
   "item.gemstonemod.amberite_apple": "Amberite Apple",
   "item.gemstonemod.saphirite_apple": "Saphirite Apple",
+  "item.gemstonemod.amberite_sword": "Amberite Sword",
+  "item.gemstonemod.amberite_pickaxe": "Amberite Pickaxe",
 
   "block.gemstonemod.amberite_block": "Block of Amberite",
   "block.gemstonemod.amberite_ore": "Amberite Ore",
