--- a/src/main/resources/assets/gemstonemod/lang/en_us.json
+++ b/src/main/resources/assets/gemstonemod/lang/en_us.json
@@ -9,6 +9,7 @@
   "item.gemstonemod.saphirite_apple": "Saphirite Apple",
   "item.gemstonemod.amberite_sword": "Amberite Sword",
   "item.gemstonemod.amberite_pickaxe": "Amberite Pickaxe",
+  "item.gemstonemod.saphirite_sword": "Saphirite Sword",
 
   "block.gemstonemod.amberite_block": "Block of Amberite",
   "block.gemstonemod.amberite_ore": "Amberite Ore",
