--- a/src/main/resources/assets/gemstonemod/lang/en_us.json
+++ b/src/main/resources/assets/gemstonemod/lang/en_us.json
@@ -10,6 +10,7 @@
   "item.gemstonemod.amberite_sword": "Amberite Sword",
   "item.gemstonemod.amberite_pickaxe": "Amberite Pickaxe",
   "item.gemstonemod.saphirite_sword": "Saphirite Sword",
+  "item.gemstonemod.opalite_axe": "Opalite Axe",
 
   "block.gemstonemod.amberite_block": "Block of Amberite",
   "block.gemstonemod.amberite_ore": "Amberite Ore",
