--- a/src/main/resources/assets/gemstonemod/lang/en_us.json
+++ b/src/main/resources/assets/gemstonemod/lang/en_us.json
@@ -12,6 +12,7 @@
   "item.gemstonemod.saphirite_sword": "Saphirite Sword",
   "item.gemstonemod.opalite_axe": "Opalite Axe",
   "item.gemstonemod.opalite": "Opalite Gem",
+  "item.gemstonemod.raw_opalite": "Raw Opalite",
 
   "block.gemstonemod.amberite_block": "Block of Amberite",
   "block.gemstonemod.amberite_ore": "Amberite Ore",
@@ -19,5 +20,7 @@
   "block.gemstonemod.deepslate_saphirite_ore": "Deepslate Saphirite Ore",
   "block.gemstonemod.saphirite_ore": "Saphirite Ore",
   "block.gemstonemod.saphirite_block": "Saphirite Block",
-  "block.gemstonemod.opalite_block": "Opalite Block"
+  "block.gemstonemod.opalite_block": "Opalite Block",
+  "block.gemstonemod.opalite_ore": "Opalite Ore",
+  "block.gemstonemod.deepslate_opalite_ore": "Deepslate Opalite Ore"
 }
