--- a/src/main/resources/assets/gemstonemod/lang/en_us.json
+++ b/src/main/resources/assets/gemstonemod/lang/en_us.json
@@ -13,6 +13,7 @@
   "item.gemstonemod.opalite_axe": "Opalite Axe",
   "item.gemstonemod.opalite": "Opalite Gem",
   "item.gemstonemod.raw_opalite": "Raw Opalite",
+  "item.gemstonemod.opalite_catalyst": "Opalite Catalyst",
 
   "block.gemstonemod.amberite_block": "Block of Amberite",
   "block.gemstonemod.amberite_ore": "Amberite Ore",
