--- a/src/main/resources/assets/gemstonemod/lang/en_us.json
+++ b/src/main/resources/assets/gemstonemod/lang/en_us.json
@@ -14,6 +14,8 @@
   "item.gemstonemod.opalite": "Opalite Gem",
   "item.gemstonemod.raw_opalite": "Raw Opalite",
   "item.gemstonemod.opalite_catalyst": "Opalite Catalyst",
+  "item.gemstonemod.opalite_pickaxe": "Opalite Pickaxe",
+  "item.gemstonemod.saphirite_axe": "Saphirite Axe",
 
   "block.gemstonemod.amberite_block": "Block of Amberite",
   "block.gemstonemod.amberite_ore": "Amberite Ore",
