--- a/src/main/resources/assets/gemstonemod/lang/en_us.json
+++ b/src/main/resources/assets/gemstonemod/lang/en_us.json
@@ -16,6 +16,8 @@
   "item.gemstonemod.opalite_catalyst": "Opalite Catalyst",
   "item.gemstonemod.opalite_pickaxe": "Opalite Pickaxe",
   "item.gemstonemod.saphirite_axe": "Saphirite Axe",
+  "item.gemstonemod.opalite_apple": "Opalite Apple",
+  "item.gemstonemod.diamond_apple": "Diamond Apple",
 
   "block.gemstonemod.amberite_block": "Block of Amberite",
   "block.gemstonemod.amberite_ore": "Amberite Ore",
