--- a/src/main/resources/assets/gemstonemod/lang/en_us.json
+++ b/src/main/resources/assets/gemstonemod/lang/en_us.json
@@ -18,6 +18,7 @@
   "item.gemstonemod.saphirite_axe": "Saphirite Axe",
   "item.gemstonemod.opalite_apple": "Opalite Apple",
   "item.gemstonemod.diamond_apple": "Diamond Apple",
+  "item.gemstonemod.saphirite_pickaxe": "Saphirite Pickaxe",
 
   "block.gemstonemod.amberite_block": "Block of Amberite",
   "block.gemstonemod.amberite_ore": "Amberite Ore",
