--- a/src/main/resources/assets/gemstonemod/lang/en_us.json
+++ b/src/main/resources/assets/gemstonemod/lang/en_us.json
@@ -19,6 +19,7 @@
   "item.gemstonemod.opalite_apple": "Opalite Apple",
   "item.gemstonemod.diamond_apple": "Diamond Apple",
   "item.gemstonemod.saphirite_pickaxe": "Saphirite Pickaxe",
+  "item.gemstonemod.opalite_sword": "Opalite Sword",
 
   "block.gemstonemod.amberite_block": "Block of Amberite",
   "block.gemstonemod.amberite_ore": "Amberite Ore",
