--- a/src/main/resources/assets/gemstonemod/lang/en_us.json
+++ b/src/main/resources/assets/gemstonemod/lang/en_us.json
@@ -37,6 +37,7 @@
   "block.gemstonemod.opalite_block": "Opalite Block",
   "block.gemstonemod.opalite_ore": "Opalite Ore",
   "block.gemstonemod.deepslate_opalite_ore": "Deepslate Opalite Ore",
+  "block.gemstonemod.sun": "Sun",
 
   "enchantment.gemstonemod.lightning_striker": "Lightning Striker",
   "enchantment.gemstonemod.healthy": "Healthy",
