--- a/src/main/resources/assets/gemstonemod/lang/en_us.json
+++ b/src/main/resources/assets/gemstonemod/lang/en_us.json
@@ -38,6 +38,7 @@
   "block.gemstonemod.opalite_ore": "Opalite Ore",
   "block.gemstonemod.deepslate_opalite_ore": "Deepslate Opalite Ore",
   "block.gemstonemod.sun": "Sun",
+  "block.gemstonemod.moon": "Moon",
 
   "enchantment.gemstonemod.lightning_striker": "Lightning Striker",
   "enchantment.gemstonemod.healthy": "Healthy",
