--- a/src/main/resources/assets/gemstonemod/lang/en_us.json
+++ b/src/main/resources/assets/gemstonemod/lang/en_us.json
@@ -39,6 +39,8 @@
   "block.gemstonemod.deepslate_opalite_ore": "Deepslate Opalite Ore",
   "block.gemstonemod.sun": "Sun",
   "block.gemstonemod.moon": "Moon",
+  "block.gemstonemod.rain": "Rain",
+  "block.gemstonemod.cloud": "Cloud",
 
   "enchantment.gemstonemod.lightning_striker": "Lightning Striker",
   "enchantment.gemstonemod.healthy": "Healthy",
