--- a/src/main/resources/assets/gemstonemod/lang/en_us.json
+++ b/src/main/resources/assets/gemstonemod/lang/en_us.json
@@ -28,6 +28,7 @@
   "item.gemstonemod.gemstone_essence": "Gemstone Essence",
   "item.gemstonemod.gemstone_bow": "Gemstone Bow",
   "item.gemstonemod.triceratops_spawn_egg": "Triceratops Spawn Egg",
+  "item.gemstonemod.kohlrabi": "Kohlrabi",
 
   "block.gemstonemod.amberite_block": "Block of Amberite",
   "block.gemstonemod.amberite_ore": "Amberite Ore",
