--- a/src/main/resources/assets/gemstonemod/lang/en_us.json
+++ b/src/main/resources/assets/gemstonemod/lang/en_us.json
@@ -43,6 +43,7 @@
   "block.gemstonemod.moon": "Moon",
   "block.gemstonemod.rain": "Rain",
   "block.gemstonemod.cloud": "Cloud",
+  "block.gemstonemod.kohlrabi_crop": "Kohlrabi Crop",
 
   "enchantment.gemstonemod.lightning_striker": "Lightning Striker",
   "enchantment.gemstonemod.healthy": "Healthy",
