--- a/src/main/resources/assets/gemstonemod/lang/en_us.json
+++ b/src/main/resources/assets/gemstonemod/lang/en_us.json
@@ -29,6 +29,7 @@
   "item.gemstonemod.gemstone_bow": "Gemstone Bow",
   "item.gemstonemod.triceratops_spawn_egg": "Triceratops Spawn Egg",
   "item.gemstonemod.kohlrabi": "Kohlrabi",
+  "item.gemstonemod.kohlrabi_seeds": "Kohlrabi Seeds",
 
   "block.gemstonemod.amberite_block": "Block of Amberite",
   "block.gemstonemod.amberite_ore": "Amberite Ore",
