--- a/src/main/resources/assets/gemstonemod/lang/en_us.json
+++ b/src/main/resources/assets/gemstonemod/lang/en_us.json
@@ -31,6 +31,7 @@
   "item.gemstonemod.kohlrabi": "Kohlrabi",
   "item.gemstonemod.kohlrabi_seeds": "Kohlrabi Seeds",
   "item.gemstonemod.triceratops_bone": "Triceratops Bone",
+  "item.gemstonemod.gemstone_wings": "Invisible Wings",
 
   "block.gemstonemod.amberite_block": "Block of Amberite",
   "block.gemstonemod.amberite_ore": "Amberite Ore",
