--- a/src/main/resources/assets/gemstonemod/lang/en_us.json
+++ b/src/main/resources/assets/gemstonemod/lang/en_us.json
@@ -36,6 +36,7 @@
   "item.gemstonemod.diorite_singularity": "Diorite Singularity",
   "item.gemstonemod.granite_singularity": "Granite Singularity",
   "item.gemstonemod.rock_singularity": "Rock Singularity",
+  "item.gemstonemod.swiftness_singularity": "Swiftness Singularity",
 
   "block.gemstonemod.amberite_block": "Block of Amberite",
   "block.gemstonemod.amberite_ore": "Amberite Ore",
