pearl on a stick

--- a/src/main/resources/assets/gemstonemod/lang/en_us.json
+++ b/src/main/resources/assets/gemstonemod/lang/en_us.json
@@ -38,6 +38,7 @@
   "item.gemstonemod.rock_singularity": "Rock Singularity",
   "item.gemstonemod.swiftness_singularity": "Swiftness Singularity",
   "item.gemstonemod.scale_singularity": "Scale Singularity",
+  "item.gemstonemod.pearl_on_a_stick": "Pearl On A Stick",
 
   "block.gemstonemod.amberite_block": "Block of Amberite",
   "block.gemstonemod.amberite_ore": "Amberite Ore",
