--- a/src/main/resources/assets/gemstonemod/lang/en_us.json
+++ b/src/main/resources/assets/gemstonemod/lang/en_us.json
@@ -39,6 +39,7 @@
   "item.gemstonemod.swiftness_singularity": "Swiftness Singularity",
   "item.gemstonemod.scale_singularity": "Scale Singularity",
   "item.gemstonemod.pearl_on_a_stick": "Pearl On A Stick",
+  "item.gemstonemod.gemstone_locator": "Gemstone Locator",
 
   "block.gemstonemod.amberite_block": "Block of Amberite",
   "block.gemstonemod.amberite_ore": "Amberite Ore",
