--- a/src/main/resources/assets/gemstonemod/lang/en_us.json
+++ b/src/main/resources/assets/gemstonemod/lang/en_us.json
@@ -40,6 +40,14 @@
   "item.gemstonemod.scale_singularity": "Scale Singularity",
   "item.gemstonemod.pearl_on_a_stick": "Pearl On A Stick",
   "item.gemstonemod.gemstone_locator": "Gemstone Locator",
+  "item.gemstonemod.copper_helmet": "Copper Helmet",
+  "item.gemstonemod.copper_chestplate": "Copper Chestplate",
+  "item.gemstonemod.copper_leggings": "Copper Leggings",
+  "item.gemstonemod.copper_boots": "Copper Boots",
+  "item.gemstonemod.oxidized_helmet": "Oxidized Helmet",
+  "item.gemstonemod.oxidized_chestplate": "Oxidized Chestplate",
+  "item.gemstonemod.oxidized_leggings": "Oxidized Leggings",
+  "item.gemstonemod.oxidized_boots": "Oxidized Boots",
 
   "block.gemstonemod.amberite_block": "Block of Amberite",
   "block.gemstonemod.amberite_ore": "Amberite Ore",
