--- a/src/main/resources/assets/gemstonemod/lang/en_us.json
+++ b/src/main/resources/assets/gemstonemod/lang/en_us.json
@@ -50,6 +50,7 @@
   "item.gemstonemod.oxidized_boots": "Oxidized Boots",
   "item.gemstonemod.overworld_zenith": "Overworld Zenith",
   "item.gemstonemod.warden_heart": "Warden Heart",
+  "item.gemstonemod.bridge_builder": "Bridge Builder",
 
   "block.gemstonemod.amberite_block": "Block of Amberite",
   "block.gemstonemod.amberite_ore": "Amberite Ore",
