--- a/src/main/resources/assets/gemstonemod/lang/en_us.json
+++ b/src/main/resources/assets/gemstonemod/lang/en_us.json
@@ -1,8 +1,8 @@
 {
   "item.gemstonemod.amberite": "Amberite Gem",
-  "item.gemstonemod.raw_amberite": "Raw Amberite",
+  "item.gemstonemod.raw_amberite": "Rough Amberite",
   "item.gemstonemod.saphirite": "Saphirite Gem",
-  "item.gemstonemod.raw_saphirite": "Raw Saphirite",
+  "item.gemstonemod.raw_saphirite": "Rough Saphirite",
   "item.gemstonemod.amberite_catalyst": "Amberite Catalyst",
   "item.gemstonemod.saphirite_catalyst": "Saphirite Catalyst",
   "item.gemstonemod.amberite_apple": "Amberite Apple",
@@ -12,7 +12,7 @@
   "item.gemstonemod.saphirite_sword": "Saphirite Sword",
   "item.gemstonemod.opalite_axe": "Opalite Axe",
   "item.gemstonemod.opalite": "Opalite Gem",
-  "item.gemstonemod.raw_opalite": "Raw Opalite",
+  "item.gemstonemod.raw_opalite": "Rough Opalite",
   "item.gemstonemod.opalite_catalyst": "Opalite Catalyst",
   "item.gemstonemod.opalite_pickaxe": "Opalite Pickaxe",
   "item.gemstonemod.saphirite_axe": "Saphirite Axe",
@@ -49,8 +49,10 @@
   "item.gemstonemod.oxidized_leggings": "Oxidized Leggings",
   "item.gemstonemod.oxidized_boots": "Oxidized Boots",
   "item.gemstonemod.overworld_zenith": "Overworld Zenith",
-  "item.gemstonemod.warden_heart": "Warden Heart",
   "item.gemstonemod.bridge_builder": "Bridge Builder",
+  "item.gemstonemod.gemstone_upgrade_template": "Gemstone Upgrade",
+  "item.gemstonemod.explosion_singularity": "Explosion Singularity",
+  "item.gemstonemod.teleportation_singularity": "Teleportation Singularity",
 
   "block.gemstonemod.amberite_block": "Block of Amberite",
   "block.gemstonemod.amberite_ore": "Amberite Ore",
