--- a/src/main/resources/assets/gemstonemod/lang/en_us.json
+++ b/src/main/resources/assets/gemstonemod/lang/en_us.json
@@ -53,6 +53,7 @@
   "item.gemstonemod.gemstone_upgrade_template": "Gemstone Upgrade",
   "item.gemstonemod.explosion_singularity": "Explosion Singularity",
   "item.gemstonemod.teleportation_singularity": "Teleportation Singularity",
+  "item.gemstonemod.kohlrabi_on_a_stick": "Kohlrabi On A Stick",
 
   "block.gemstonemod.amberite_block": "Block of Amberite",
   "block.gemstonemod.amberite_ore": "Amberite Ore",
